Created version 2.1-SNAPSHOT Fixed some compilation problem Test added